Fixed for java 8 compatibility